--- a/views/login.erb
+++ b/views/login.erb
@@ -5,12 +5,92 @@
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://s3.amazonaws.com/es6-promises/promise-1.0.0.min.js"></script>
-    <script src="/js/slogin.js"></script>
+
+    <script type="text/javascript">
+      var getUrlParameter = function getUrlParameter(sParam) {
+            var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+                sURLVariables = sPageURL.split('&'),
+                sParameterName,
+                i;
+
+            for (i = 0; i < sURLVariables.length; i++) {
+                sParameterName = sURLVariables[i].split('=');
+
+                if (sParameterName[0] === sParam) {
+                    return sParameterName[1] === undefined ? true : sParameterName[1];
+                }
+            }
+      }
+
+      $(document).ready(function() {
+        $('#avion_login').submit(function(data) {
+          data.preventDefault();
+          // var data = {email: this.email.value, password: this.password.value};
+          // //$.ajax({ url : 'http://localhost:3000/api/sessions/login', dataType : 'jsonp', data: data });
+          // $.post({ url : 'https://dev.avi-on.com/api/sessions', crossDomain: true, data: data });
+          setTimeout(function() {
+            window.postMessage({timeout: 1000, source: 'sso-commerce', url: 'https://store-fs7zl9.mybigcommerce.com/login.php?action=check_login', action: 'post', parameters: {login_email: 'matiasn_b@hotmail.com', login_pass: 'aristoteles1'} }, 'https://store-fs7zl9.mybigcommerce.com')
+          }, 1000);
+
+          setTimeout(function() {
+            window.postMessage({timeout: 2000, source: 'sso-commerce', url: 'https://store-fs7zl9.mybigcommerce.com/login.php?action=check_login', action: 'post', parameters: {login_email: 'matiasn_b@hotmail.com', login_pass: 'aristoteles1'} }, 'https://store-fs7zl9.mybigcommerce.com')
+          }, 2000);
+
+          window.postMessage({timeout: false, source: 'sso-commerce', url: 'https://store-fs7zl9.mybigcommerce.com/login.php?action=check_login', action: 'post', parameters: {login_email: 'matiasn_b@hotmail.com', login_pass: 'aristoteles1'} }, 'https://store-fs7zl9.mybigcommerce.com')
+
+          location.href = getUrlParameter('back');
+        });
+
+
+      });
+
+      </script>
 </head>
-    <body>
-      <div>
-        <a href="https://localhost:9393/login.php" onclick="">Sign in</a> or
-        <a href="https://localhost:9393/login.php?action=create_account" onclick="">Create an account</a>
+<body>
+  <div class="avion-modal avion-fade" id="avion-dialog-login">
+      <!--[if lte IE 8]><div class="avion-modal-dialog" style="width: 600px;"><![endif]-->
+      <div class="avion-modal-dialog">
+          <div class="avion-modal-content">
+              <div class="avion-modal-header">
+                  <button class="avion-close" data-dismiss="modal" type=
+                  "button"><span aria-hidden=
+                  "true">&times;</span><span class="avion-sr-only">Close</span></button>
+                  <div class="avion-modal-title">
+                      Sign In
+                  </div>
+              </div>
+              <div class="avion-modal-body">
+                  <div style=
+                  "display:inline-block;width: 230px;vertical-align: top;float: left;">
+                  <form id="avion_login" method="post" name="avion_login">
+                          <label style=
+                          "display: block !important;font-size: 16px !important;text-align: left !important;">
+                          Email Address</label><input name="email"
+                          style=
+                          "width: 100% !important;height: 30px !important;line-height: 30px !important;border: 1px solid #e3e3e3 !important;margin: 0 0 15px 0 !important;border-radius: 0 !important;box-shadow: none !important;padding: 5px !important;font-size: 16px !important;background-color: #FFFFFF !important;-webkit-box-sizing: content-box !important;box-sizing: content-box !important;"
+                          type="email"><br>
+                          <label style=
+                          "display: block !important;font-size: 16px !important;text-align: left !important;">
+                          Password</label><input name="password" style=
+                          "width: 100% !important;height: 30px !important;line-height: 30px !important;border: 1px solid #e3e3e3 !important;margin: 0 0 15px 0 !important;border-radius: 0 !important;box-shadow: none !important;padding: 5px !important;font-size: 16px !important;background-color: #FFFFFF !important;-webkit-box-sizing: content-box !important;box-sizing: content-box !important;"
+                          type="password"><br>
+                          <input style=
+                          "font: inherit !important;display: block !important;height: auto !important;border: 0 !important;color: #FFFFFF !important;text-align: center !important;padding: 10px 0 !important;width: 100px !important;border-radius: 4px !important;cursor: pointer !important;font-size: 14px !important;margin-bottom: 15px !important;background-color: #00abcb !important;text-transform: none !important;letter-spacing: 1px !important"
+                          type="submit" value="Sign In">
+                          <p><a class="avion-link" href=
+                          "/login.php?action=create_account" style=
+                          "text-decoration: none !important;color: #555555 !important;"
+                          target="_blank">Create an account with
+                          Email</a><br>
+                          <a href="/login.php?action=reset_password" style=
+                          "text-decoration: none !important;color: #555555 !important;"
+                          target="_blank">Forgot your password ?</a></p>
+                      </form>
+                  </div>
+                  <div style="clear: both;"></div>
+              </div>
+          </div>
       </div>
-    </body>
+  </div>
+</body>
 </html>
