--- a/views/store.erb
+++ b/views/store.erb
@@ -5,12 +5,12 @@
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://s3.amazonaws.com/es6-promises/promise-1.0.0.min.js"></script>
-    <script src="/js/slogin.js"></script>
+    <script src="/js/sso-commerce.static.js"></script>
 </head>
-    <body>
-      <div>
-        <a href="https://store-fs7zl9.mybigcommerce.com/login.php" onclick="">Sign in</a> or
-        <a href="https://store-fs7zl9.mybigcommerce.com/login.php?action=create_account" onclick="">Create an account</a>
-      </div>
-    </body>
+  <body>
+    <div>
+      <a href="https://store-fs7zl9.mybigcommerce.com/login.php" onclick="">Sign in</a> or
+      <a href="https://store-fs7zl9.mybigcommerce.com/login.php?action=create_account" onclick="">Create an account</a>
+    </div>
+  </body>
 </html>
